--- a/templates/email/booking_confirmation_email.html
+++ b/templates/email/booking_confirmation_email.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Booking Confirmation Email</title>
+</head>
+<body>
     <h3>Dear {{ reservation.user.username }},</h3>
     <p>   Your booking request has been confirmed. Here are the details:</p>
     <ul>
@@ -12,3 +21,7 @@
     <p>Thank you for choosing our service. If you have any questions, feel free to contact us.</p><br><br>
     <p>Best regards,</p>
     <p>The Admin Team</p>
+
+</body>
+</html>
+    
