--- a/templates/email/booking_rejection_email.html
+++ b/templates/email/booking_rejection_email.html
@@ -1,5 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Booking Rejection Email</title>
+</head>
+<body>
     <h3>Dear {{ reservation.user.username }},</h3>
-    <p>     We regret to inform you that your request to book {{ reservation.number_of_rooms }} rooms has been rejected.</p>
-    <p>If you have any questions or need further assistance, please feel free to contact us.</p><br><br>
+    <p>     We regret to inform you that your request to book {{ reservation.number_of_rooms }} rooms has been rejected. If you have any questions or need further assistance, please feel free to contact us.</p><br><br>
     <p>Best regards,</p>
     <p>The Admin Team</p>
+</body>
+</html>
+    
